# acme-motor-quote-poc

./: ACME_ChatGPT_PoC_Build_Brief_v1_0.md  README.md
backend/: pyproject.toml
backend/app/: agent.py  documents.py  extraction.py  main.py  quote_session_client.py
backend/app/api/: main.py
backend/tests/: test_agent.py  test_api.py  test_documents.py  test_extraction.py  test_upload.py
dashboard/: app.js  index.html  styles.css
docs/superpowers/plans/: 2026-06-16-axa-motor-quoting-poc.md  2026-06-23-acme-brief-v1-implementation-plan.md
docs/superpowers/specs/: 2026-06-16-axa-motor-quoting-poc-design.md
frontend/src/: api.ts  types.ts
frontend/src/components/: ChatWindow.tsx  Composer.test.tsx  Composer.tsx  ConfirmationCard.tsx  ConflictPrompt.test.tsx  ConflictPrompt.tsx  MessageList.tsx  QuoteCard.test.tsx  QuoteCard.tsx
mcp-server/app/: platform_client.py  schemas.py  server.py  store.py
mcp-server/app/widgets/: document_upload.html  quote_card.html
mcp-server/tests/: test_platform_client.py  test_server.py  test_store.py
platform/app/: api.py
platform/src/main/java/com/acme/platform/pricing/: PricingService.java  UnderwritingEngine.java  UnderwritingOutcome.java
platform/src/main/java/com/acme/platform/purchase/: PurchaseLinkService.java
platform/src/main/java/com/acme/platform/quote/: DemoSeeder.java  (+2 more)
platform/src/main/resources/: application.properties
platform/src/main/resources/mock-quotes/: README.md  decline-under-age.json  referral-high-value.json  standard-quote.json  young-driver-quote.json
scripts/: generate_mock_docs.py
(+6 files in other folders)
