[project]
name = "backend"
version = "0.1.0"
description = "ACME motor insurance quoting POC — mock FastAPI backend with an LLM chat agent."
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.1",
    "mcp[cli]>=1.28.0",
    "openai>=1.40",
    "pydantic>=2",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
